--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gateway": "node services/api-gateway/index.js",
     "payment": "node services/payment-service/index.js"
   },
-  "author": "William Nobili, Beatrice Capella",
+  "author": "William Nobili",
   "dependencies": {
     "aedes": "^0.51.3",
     "axios": "^1.8.3",
